[project]
name = "truss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.14",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["ruff>=0.12.2"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]
